--- a/Assets/Heart/Modules/AssetLoader/Runtime/Pancake.AssetLoader.asmdef
+++ b/Assets/Heart/Modules/AssetLoader/Runtime/Pancake.AssetLoader.asmdef
@@ -4,7 +4,8 @@
   "references": [
     "GUID:9e24947de15b9834991c9d8411ea37cf",
     "GUID:84651a3751eca9349aac36a66bba901b",
-    "GUID:adac8d59ad7e8504f82d387cded797a7"
+    "GUID:adac8d59ad7e8504f82d387cded797a7",
+    "GUID:f51ebe6a0ceec4240a699833d6309b23"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
@@ -18,6 +19,11 @@
       "name": "com.unity.addressables",
       "expression": "1.17.4",
       "define": "PANCAKE_ADDRESSABLE"
+    },
+    {
+      "name": "com.unity.addressables",
+      "expression": "2.0.0",
+      "define": "PANCAKE_UNITASK"
     }
   ],
   "noEngineReferences": false
