--- a/Assets/Heart/Modules/Tag/Pancake.Tag.asmdef
+++ b/Assets/Heart/Modules/Tag/Pancake.Tag.asmdef
@@ -2,7 +2,8 @@
     "name": "Pancake.Tag",
     "rootNamespace": "",
     "references": [
-        "GUID:adac8d59ad7e8504f82d387cded797a7"
+        "GUID:adac8d59ad7e8504f82d387cded797a7",
+        "GUID:2bb2982fd552689428d4c3ae8bb26fb7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
